<resources>
    <string name="app_name">SnapCal</string>
    <string name="profile">Akun\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perbarui_kata_sandi_explaine">Perbarui kata sandi akun Anda untuk menjaga keamanan dan akses yang aman. Masukkan kata sandi baru yang kuat, dan konfirmasikan kata sandi baru Anda. Tekan <b>\"Simpan\"</b> untuk menyelesaikan proses.</string>
    <string name="desc_app">Selamat Datang di SnapCal. Hitung kalori Anda dengan mudah dan cepat untuk hidup lebih sehat.</string>
    <string name="item_title">Item Title</string>
    <string name="motivated_text">Ayo mulai sekarang!</string>
    <string name="kalkulator_text">BMI Kalkulator</string>
    <string name="scan_historytext">Riwayat Scan</string>
    <string name="about_apps">Tentang SnapCal</string>
    <string name="pass_autofill_text">Kata Sandi*</string>
    <string name="button_text">MASUK</string>
    <string name="signup_directed_text">Daftar</string>
    <string name="desc_below_text">Belum Memiliki Akun?</string>
    <string name="email_autofill_text">Email*</string>
    <string name="sub_viewcard_text">Masuk</string>
    <string name="gagal_memunculkan_kamera">Gagal memunculkan kamera.</string>
    <string name="gagal_mengambil_gambar">Gagal mengambil gambar.</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="icon_splash_screen">icon splash screen</string>
    <string name="makanan">Makanan</string>
    <string name="kalori">Kalori</string>
    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>
    <string name="perbarui_kata_sandi">Perbarui Kata Sandi</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="batal">Batal</string>
    <string name="username">Username :</string>
    <string name="username_et">Username</string>
    <string name="email">Email :</string>
    <string name="email_et">Email</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="berat_badan">Berat Badan :</string>
    <string name="berat_badan_et">Berat Badan</string>
    <string name="tinggi_badan">Tinggi Badan :</string>
    <string name="tinggi_badan_et">Tinggi Badan</string>
    <string name="usia">Usia :</string>
    <string name="usia_et">Usia</string>
    <string name="tinggi_badan_cm">Tinggi Badan (cm)</string>
    <string name="masukkan_tinggi_badan">Masukkan tinggi badan*</string>
    <string name="berat_badan_kg">Berat Badan (kg)</string>
    <string name="masukkan_berat_badan">Masukkan berat badan*</string>
    <string name="hitung_bmi">HITUNG</string>
    <string name="result">RESULT</string>
    <string name="pendaftaran_akun">Pendaftaran Akun</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="kata_sandi_et">Kata Sandi</string>
    <string name="daftar">DAFTAR</string>
    <string name="sudah_memiliki_akun">Sudah Memiliki Akun?</string>
    <string name="masuk">Masuk</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="masuk_aplikasi">Masuk Aplikasi</string>
    <string name="scan_desc">Scan</string>
    <string name="gallery_desc">Gallery</string>
    <string name="flashlight_desc">Flashlight</string>
    <string name="rotate_camera_desc">Rotate Camera</string>
    <string name="photo_profile_desc">Photo Profile</string>
    <string name="edit_photo">Edit</string>
    <string name="food_images_desc">Food Images</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="cek_list_makanan_sehat">Cek List Makanan Sehat</string>
    <string name="akun_tv">Akun</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="ganti_kata_sandi_tv">Ganti Kata Sandi</string>
    <string name="hapus_akun_tv">Hapus Akun</string>
    <string name="tentang_apilkasi_tv">Tentang Apilkasi</string>
    <string name="keluar_akun_tv">Keluar</string>
    <string name="icon_kalkulator">Icon Kalkulator</string>
    <string name="food_name_tv">Food Name</string>
    <string name="calorie_foods_tv">Calories:</string>
    <string name="protein_foods_tv">Protein:</string>
    <string name="sugar_foods_tv">Sugar:</string>
    <string-array name="gender_array">
        <item>Laki - Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>