<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/navy_blue"
            app:strokeWidth="3dp">

            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/food_images_desc"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name_tv"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/calorie_foods_tv"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/protein"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/protein_foods_tv"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sugar"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/sugar_foods_tv"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
