<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.main.CalculatorActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_margin="8dp"
        android:padding="36dp"
        app:cardBackgroundColor="@color/lavender_blue"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tinggi_badan_cm"
                android:textColor="@color/navy_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:textColorHint="#8A8A8A">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tinggi_badan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/inner_shadow"
                    android:hint="@string/masukkan_tinggi_badan"
                    android:inputType="numberDecimal"
                    android:textColor="@color/navy_blue"
                    android:gravity="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/berat_badan_kg"
                android:textColor="@color/navy_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:textColorHint="#8A8A8A">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_berat_badan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/inner_shadow"
                    android:hint="@string/masukkan_berat_badan"
                    android:inputType="numberDecimal"
                    android:textColor="@color/navy_blue"
                    android:gravity="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_hitung_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/golden_yellow"
                android:text="@string/hitung_bmi"
                android:textStyle="bold"
                android:textColor="@color/navy_blue"
                android:elevation="6dp"/>

            <TextView
                android:id="@+id/tv_hasil_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/result"
                android:textColor="@color/navy_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>