<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgbg_regis"
    tools:context=".view.signUp.ActSignUp">
  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:indeterminateTint="@color/tulip"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  <TextView
      android:id="@+id/titleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pendaftaran_akun"
      android:textSize="24sp"
      android:textStyle="bold"
      android:textColor="@android:color/white"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <androidx.cardview.widget.CardView
      android:id="@+id/cardSignup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardCornerRadius="28dp"
      android:layout_marginBottom="-28dp"
      app:cardBackgroundColor="@color/light_blue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginBottom="20dp">

    <TextView
          android:id="@+id/titleSignup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="15dp"
          android:text="@string/pendaftaran"
          android:textColor="@color/navy_blue"
          android:textSize="18sp"
          android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:textColorHint="@color/navy_blue"
          app:boxBackgroundColor="@color/white"
          app:boxCornerRadiusBottomEnd="20dp"
          app:boxCornerRadiusBottomStart="20dp"
          app:boxCornerRadiusTopEnd="20dp"
          app:boxCornerRadiusTopStart="20dp"
          app:boxStrokeColor="@color/golden_yellow"
          app:hintTextColor="@color/navy_blue">

        <EditText
            android:id="@+id/userSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_users_foreground"
            android:drawablePadding="10dp"
            android:hint="@string/username_et"
            android:padding="2dp"
            android:textColor="@color/navy_blue"
            android:textColorHint="@color/navy_blue"
            android:textSize="22sp"
            tools:ignore="Autofill,TextFields" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:textColorHint="@color/navy_blue"
          app:boxBackgroundColor="@color/white"
          app:boxCornerRadiusBottomEnd="20dp"
          app:boxCornerRadiusBottomStart="20dp"
          app:boxCornerRadiusTopEnd="20dp"
          app:boxCornerRadiusTopStart="20dp"
          app:boxStrokeColor="@color/golden_yellow"
          app:hintTextColor="@color/navy_blue">

        <EditText
            android:id="@+id/emailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_foreground"
            android:drawablePadding="10dp"
            android:hint="@string/email_et"
            android:inputType="textEmailAddress"
            android:padding="2dp"
            android:textColor="@color/navy_blue"
            android:textColorHint="@color/navy_blue"
            android:textSize="22sp"
            tools:ignore="Autofill" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:textColorHint="@color/navy_blue"
          app:boxBackgroundColor="@color/white"
          app:boxCornerRadiusBottomEnd="20dp"
          app:boxCornerRadiusBottomStart="20dp"
          app:boxCornerRadiusTopEnd="20dp"
          app:boxCornerRadiusTopStart="20dp"
          app:boxStrokeColor="@color/golden_yellow"
          app:endIconMode="password_toggle"
          app:endIconTint="@color/navy_blue"
          app:hintTextColor="@color/navy_blue">

        <EditText
            android:id="@+id/passSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_keypass_foreground"
            android:drawablePadding="10dp"
            android:hint="@string/kata_sandi_et"
            android:inputType="textPassword"
            android:padding="2dp"
            android:textColor="@color/navy_blue"
            android:textColorHint="@color/navy_blue"
            android:textSize="22sp"
            tools:ignore="Autofill" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/btnSignup"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="16dp"
          android:backgroundTint="@color/golden_yellow"
          android:text="@string/daftar"
          android:textSize="16sp"
          android:textColor="@color/navy_blue"
          android:textStyle="bold"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/sudah_memiliki_akun"
            android:textColor="@color/navy_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/masuk"
            android:textColor="@color/navy_blue" />
      </LinearLayout>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  </androidx.constraintlayout.widget.ConstraintLayout>