<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.editProfile.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="70dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminateTint="@color/tulip"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/iv_Avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Photo Profile"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic"
                tools:ignore="HardcodedText" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEdit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:contentDescription="Edit"
                android:src="@drawable/baseline_edit_24"
                app:backgroundTint="@color/navy_blue"
                app:fabCustomSize="50dp"
                app:tint="@color/white"
                tools:ignore="HardcodedText" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/lavender_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/username"
                        android:textColor="@color/navy_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/username_et"
                        android:padding="7dp"
                        android:textColor="@color/navy_blue"
                        android:textColorHint="#8C8C8C"
                        android:textStyle="bold"
                        tools:ignore="Autofill,TextFields" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#6A6A6A"
                    android:minHeight="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textColor="@color/navy_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:enabled="false"
                        android:hint="@string/email_et"
                        android:padding="7dp"
                        android:textColor="@color/navy_blue"
                        android:textColorHint="#8C8C8C"
                        android:textStyle="bold"
                        tools:ignore="Autofill,TextFields" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#6A6A6A"
                    android:minHeight="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/jenis_kelamin"
                        android:textColor="@color/navy_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerGender"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/style_spinner"
                        android:padding="7dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#6A6A6A"
                    android:minHeight="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/berat_badan"
                        android:textColor="@color/navy_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_weight"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/berat_badan_et"
                        android:padding="7dp"
                        android:textColor="@color/navy_blue"
                        android:textColorHint="#8C8C8C"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#6A6A6A"
                    android:minHeight="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/tinggi_badan"
                        android:textColor="@color/navy_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_height"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/tinggi_badan_et"
                        android:padding="7dp"
                        android:textColor="@color/navy_blue"
                        android:textColorHint="#8C8C8C"
                        android:textStyle="bold"
                        tools:ignore="Autofill,TextFields" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#6A6A6A"
                    android:minHeight="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/usia"
                        android:textColor="@color/navy_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_age"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/usia_et"
                        android:padding="7dp"
                        android:textColor="@color/navy_blue"
                        android:textColorHint="#8C8C8C"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="#6A6A6A"
                    android:minHeight="2dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#6A6A6A"
            android:minHeight="2dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBatal"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#E83B3B"
                android:text="@string/batal"
                android:textSize="18sp"
                app:icon="@drawable/ic_cancel"
                app:iconGravity="start"
                app:iconSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#21A624"
                android:text="@string/simpan"
                android:textSize="18sp"
                app:icon="@drawable/ic_check"
                app:iconGravity="start"
                app:iconSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>